fix-responsive-root-overflow-H

--- a/src/styles/SocialMedia.module.css
+++ b/src/styles/SocialMedia.module.css
@@ -92,16 +92,16 @@ justify-content: center;
   font-size: 80px;
 }
 .wsp{
-  top:93.5%;
+  top:89.5%;
   width: 6%;
-  height: 6%;
+  height: 9%;
 }
 }
 @media (max-width:1200px){
 .wsp{
   
-  top:93.8%;
-  height: 5%;
+  top:90%;
+  height: 8%;
   width: 7%;
 }
 }
@@ -153,9 +153,9 @@ justify-content: center;
   }
   .wsp{
     left:80%;
-    top:91%;
-    height: 6%;
-    width: 15%;
+    top:94%;
+    height: 5%;
+    width: 17%;
   }
 }
 @media (max-width:320px){
